# SmartLoopCapture

./: CMakeLists.txt  CMakePresets.json  README.md
audio_plugin/include/: PluginEditor.h  PluginProcessor.h
audio_plugin/source/: PluginEditor.cpp  PluginProcessor.cpp
test/: CMakeLists.txt
test/source/: AudioProcessorTest.cpp
